Work on BDA translation
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/bda/en/latex/en/about/description.tex
+++ b/orsys/bda/en/latex/en/about/description.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Description}
-  This training introduces the \textbf{fondamentals} of \textbf{statistical modeling} with a focus on hands-on practice.
+  This training introduces the \textbf{fundamentals} of \textbf{statistical modeling} with a focus on hands-on practice.
 \end{frame}
 
 \begin{frame}{Prerequisites}
