--- a/shared/latex/en/about/horaires-4j-orsys.tex
+++ b/shared/latex/en/about/horaires-4j-orsys.tex
@@ -1,7 +1,3 @@
-\begin{frame}{Emploi du temps}
-  \begin{itemize}
-  \item 4 jours de 9h à 12h30 et de 14h à 17h30
-  \item Le dernier jour, on termine à 15h30.
-    Donc à 15h00 on commence à remplir les documents administratifs.
-  \end{itemize}
+\begin{frame}{Schedule}
+  4 days, 9AM to 12:30PM and 1:30PM to 5PM.
 \end{frame}
