--- a/shared/latex/en/python/basics/tp-variables.tex
+++ b/shared/latex/en/python/basics/tp-variables.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1v0X31LFt_C6qvTpBbAXNg7HgHt-UxDOC\#forceEdit=true&sandboxMode=true}{Instructions}
+\begin{frame}{Practical exercises}
+  \bluelink{https://colab.research.google.com/drive/1mhPpBiqusukLEljsi6dE5mVaVvd6qKPM\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
