--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \begin{frame}{Name hierarchy}
-  \V{["tikz/ml/ia-ml-deep", "th", 0.8] | image}
+  \V{["tikz/ml/ia-ml-deep", "th", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Machine Learning}
@@ -21,7 +21,7 @@
 \end{frame}
 
 \begin{frame}{Engineering}
-  \V{["tikz/ml/ml-ingenierie", "th", 0.75] | image}
+  \V{["tikz/ml/ml-ingenierie-en", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}{Raw material: data}
@@ -74,11 +74,11 @@
 \end{frame}
 
 \begin{frame}{Example --- Classification with CNNs --- Model}
-  \V{["img/cnn-schema", "tw", 1] | image}
+  \V{["img/cnn-schema", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Example --- Reinforcement learning}
-  \V{["img/car-dashboard", "tw", 0.8] | image}
+  \V{["img/car-dashboard", "tw", 0.8, "en"] | image}
 \end{frame}
 
 \begin{frame}{Domain topology}
