--- a/shared/latex/en/ml/prerequisites/calculus.tex
+++ b/shared/latex/en/ml/prerequisites/calculus.tex
@@ -5,26 +5,26 @@
 
 \begin{frame}{Key idea}
 
-  \begin{enumerate}[<+->]
+  \begin{enumerate}
     \item Choose a starting point and \emph{follow the slope} of the function to get closer to a minimum
     \item Repeat
   \end{enumerate}
 
-  \onslide<+->{Slope = derivative}
+  Slope = derivative
 
-  \onslide<+->{→ To \emph{follow the slope}, slightly pull the current point towards the opposite of the derivative.}
+  → To \emph{follow the slope}, slightly pull the current point towards the opposite of the derivative.
 \end{frame}
 
 \begin{frame}{Positive derivative}
 
-  \V{["plt/slope-positive-en", "tw", 0.8] | image}
+  \V{["plt/slope-positive-en", "th", 0.5] | image}
 
   Opposite of the derivative = $-2$. With a factor of $0.1$, the current point goes from $1$ to $0.8$.
 \end{frame}
 
 \begin{frame}{Negative derivative}
 
-  \V{["plt/slope-negative-en", "tw", 0.8] | image}
+  \V{["plt/slope-negative-en", "th", 0.5] | image}
 
   Opposite of the derivative = $2$. With a factor of $0.1$, the current point goes from $-1$ to $-0.8$.
 \end{frame}
