--- a/shared/latex/en/ml/prerequisites/statistics.tex
+++ b/shared/latex/en/ml/prerequisites/statistics.tex
@@ -47,12 +47,12 @@
 
   For gaussian distributions:
 
-  \V{["img/68-95-99,7", "th", 0.7] | image}
+  \V{["img/68-95-99,7", "th", 0.7, "en"] | image}
 \end{frame}
 
 \begin{frame}{Quartiles, quantiles}
 
-  Quartiles ($Q_1$, $Q_2$ et $Q_3$) divide data in 4
+  Quartiles ($Q_1$, $Q_2$ and $Q_3$) divide data in 4
   intervals containing the same number of samples.
 
   More generally, $n$ intervals can be used (quantiles). Most used besides quartiles are deciles and percentiles.
@@ -60,7 +60,7 @@
 
 \begin{frame}{Boxplot}
 
-  \V{["img/boxplot", "th", 0.8] | image}
+  \V{["img/boxplot", "th", 0.7, "en"] | image}
 \end{frame}
 
 \begin{frame}{Covariance}
@@ -103,7 +103,7 @@
 
 \begin{frame}{Skewness}
 
-  \V{["img/skew", "tw", 1] | image}
+  \V{["img/skew", "tw", 1, "en"] | image}
 
   \[
     \asym(X) = \mathbb{E} \left[\left(\frac{X - \bar{X}}{\sigma}\right)^3\right]
@@ -112,7 +112,7 @@
 
 \begin{frame}{Kurtosis}
 
-  \V{["img/kurtosis", "th", 0.5] | image}
+  \V{["img/kurtosis", "th", 0.5, "en"] | image}
 
   \[
     \kurt(X) = \mathbb{E} \left[\left(\frac{X - \mu}{\sigma}\right)^4\right]
