--- a/shared/latex/en/ml/tp-data.tex
+++ b/shared/latex/en/ml/tp-data.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Instructions}
   \begin{center}
-    \bluelink{https://colab.research.google.com/drive/1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51\#forceEdit=true&sandboxMode=true}{Exploration \& préparation de données}
+    \bluelink{https://colab.research.google.com/drive/1d_CJX6tnCKbLWI15m52qw6jVForcBWaJ\#forceEdit=true&sandboxMode=true}{Data exploration \& preparation}
   \end{center}
 \end{frame}
