--- a/shared/latex/en/python/basics/tp-control-structures.tex
+++ b/shared/latex/en/python/basics/tp-control-structures.tex
@@ -1,4 +1,4 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \begin{enumerate}
     \item \bluelink{https://colab.research.google.com/drive/1iljrc6V3UzXqmpi9pK62qVIcqp_kXZ_4\#forceEdit=true&sandboxMode=true}{Instructions}
     \item \bluelink{https://colab.research.google.com/drive/1cd9P5nChxLCDp-0CUzRF9ctEXg_0SsmV\#forceEdit=true&sandboxMode=true}{Instructions}
