--- a/shared/latex/en/python/basics/tp-functions.tex
+++ b/shared/latex/en/python/basics/tp-functions.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1w-7WGl5xstwFzhGdNaT_B0dsK2LY8OZD\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
