--- a/shared/latex/en/unsupervised/anomaly-detection/intro.tex
+++ b/shared/latex/en/unsupervised/anomaly-detection/intro.tex
@@ -26,13 +26,15 @@
   Normal classification problem, with strong class imbalance.
   Use for example a resampling library like \bluelink{https://imbalanced-learn.org/}{imbalanced-learn}.
 
-  Very efficient neural networks and SVM.
+  Very efficient models: neural networks and SVMs.
 \end{frame}
 
 \begin{frame}{Semi-Supervised}
-  Novelty detection. \\
-  Not covered here. \\
-  One-class SVM widely used.
+  Novelty detection.
+
+  Not covered here.
+
+  One-class SVM is widely used.
 \end{frame}
 
 \begin{frame}{Unsupervised}
