--- a/shared/latex/en/unsupervised/clustering/conclusion.tex
+++ b/shared/latex/en/unsupervised/clustering/conclusion.tex
@@ -8,6 +8,6 @@
   \frametitle{Conclusion}
   \begin{itemize}
     \item No \textit{best} metric
-    \item Large spectrum of metrics dependant of the multidimensional data structure
+    \item Large spectrum of metrics
   \end{itemize}
 \end{frame}
