--- a/shared/latex/en/unsupervised/clustering/hierarchical-clustering.tex
+++ b/shared/latex/en/unsupervised/clustering/hierarchical-clustering.tex
@@ -18,7 +18,7 @@
   \end{description}
 \end{frame}
 
-\begin{frame}{Hierarchical clustering --- Résultat}
+\begin{frame}{Hierarchical clustering --- Result}
   \V{["img/dendogram", "th", 0.8] | image}
 \end{frame}
 
@@ -39,5 +39,5 @@
   \item ...
   \end{description}
 
-  \onslide<+->{Méthode exacte~: $O(n^2)$ < complexité < $O(n^3)$ !}
+  \onslide<+->{Exact method: $O(n^2)$ < complexity < $O(n^3)$ !}
 \end{frame}
