--- a/shared/latex/en/unsupervised/clustering/kmeans-gaussian.tex
+++ b/shared/latex/en/unsupervised/clustering/kmeans-gaussian.tex
@@ -24,7 +24,7 @@
 \end{frame}
 
 \begin{frame}{K-Means++}
-  Améliore l'initialisation~:
+  Improves initialization:
 
   \begin{itemize}
     \item Choose a random point as initial cluster
