--- a/shared/latex/en/unsupervised/clustering/pca-classification-hierarchique-composantes-principales.tex
+++ b/shared/latex/en/unsupervised/clustering/pca-classification-hierarchique-composantes-principales.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Hierarchical Classification on PCA}
-  Réduction de dimension par PCA, puis clustering hiérarchique.
+  First PCA, then clustering.
 
   \V{["img/hybrid-pca-hierarchical", "th", 0.7] | image}
 \end{frame}
