--- a/shared/latex/en/ml/learning.tex
+++ b/shared/latex/en/ml/learning.tex
@@ -51,7 +51,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["plt/overfitting-train", "th", 0.3, "en"] | image}
+    \V{["plt/overfitting-train-en", "th", 0.3, "en"] | image}
   \end{minipage}\hfill
   Many techniques depending on the model:
   \begin{itemize}
