--- a/shared/latex/en/python/basics/tp-collections.tex
+++ b/shared/latex/en/python/basics/tp-collections.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1sclAFp2Ehix8rdU6iJZnDo70ARnOpOYK\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
