--- a/shared/latex/en/python/basics/tp-files.tex
+++ b/shared/latex/en/python/basics/tp-files.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1EuPnMUso-N2CWQks9TsdCvwpgzcJ80Am\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
