--- a/shared/latex/en/python/basics/tp-oop.tex
+++ b/shared/latex/en/python/basics/tp-oop.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \bluelink{https://colab.research.google.com/drive/1FyquNn6ilae_gmD6LrjfaL5RcHLe1AWg\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
