Work on BDA translation
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nlp/tf-idf.tex
+++ b/shared/latex/en/nlp/tf-idf.tex
@@ -31,7 +31,7 @@
   \item the-dog, dog-eats, eats-meat
   \end{itemize}
 
-  Trigrammes de caractères~:
+  Character trigrams:
 
   \begin{itemize}
   \item the, \_do, dog, og\_, g\_e, \_ea, eat, ats, ts\_, s\_m, …
