--- a/shared/latex/en/nlp/tp-wordembeddings.tex
+++ b/shared/latex/en/nlp/tp-wordembeddings.tex
@@ -1,4 +1,4 @@
 
-\begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3\#forceEdit=true&sandboxMode=true}{Instructions}
+\begin{frame}{Practical exercises}
+  \bluelink{https://colab.research.google.com/drive/1m2Xs8NgxA82L6E-IUoZ_1SUlOSTjtGIx\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
