--- a/shared/latex/en/supervised/svm.tex
+++ b/shared/latex/en/supervised/svm.tex
@@ -11,7 +11,7 @@
 \end{frame}
 
 \begin{frame}{SVM solution}
-  \V{["img/svm-schema-nzmog", "tw", 0.8, "en"] | image}
+  \V{["img/svm-schema-nzmog-en", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Non-linearly separable data}
