--- a/shared/latex/en/supervised/tp-svm-text.tex
+++ b/shared/latex/en/supervised/tp-svm-text.tex
@@ -1,3 +1,3 @@
-\begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1IhgvvknJ5TYiM4gihiYYCK3UF4sW5-F3\#forceEdit=true&sandboxMode=true}{Instructions}
+\begin{frame}{Practical exercices}
+  \bluelink{https://colab.research.google.com/drive/1gN85BxkX8ckdWmUOMdkX8ay-xXEQMjaQ\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
