--- a/shared/latex/en/nlp/tp-text-features-engineering.tex
+++ b/shared/latex/en/nlp/tp-text-features-engineering.tex
@@ -1,6 +1,6 @@
-\begin{frame}{Travaux pratiques}
+\begin{frame}{Practical exercises}
   \begin{enumerate}
-    \item \bluelink{https://colab.research.google.com/drive/1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5\#forceEdit=true&sandboxMode=true}{Instructions --- découverte de l'API d'analyse de texte de Spacy}
-    \item \bluelink{https://colab.research.google.com/drive/1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA\#forceEdit=true&sandboxMode=true}{Instructions --- utilisation de TF-IDF et LSA}
+    \item \bluelink{https://colab.research.google.com/drive/1GpQ4C3UVVMfF678kbEnXau5VeIX_iLpQ\#forceEdit=true&sandboxMode=true}{Instructions --- Spacy}
+    \item \bluelink{https://colab.research.google.com/drive/1U58VXb2Az-y9KSGsxQxUq95LG63FWaKm\#forceEdit=true&sandboxMode=true}{Instructions --- TF-IDF and LSA}
   \end{enumerate}
 \end{frame}
