--- a/shared/latex/en/python/basics/intro-collections.tex
+++ b/shared/latex/en/python/basics/intro-collections.tex
@@ -1,12 +1,10 @@
 \begin{frame}{Introduction}
-  Les quatre principales structures de données en Python sont~:
+  The 4 main data structures in Python are:
 
   \begin{description}
-    \item[\texttt{list}] Listes modifiables et potentiellement hétérogènes
-    \item[\texttt{dict}] Associations clef-valeur
-    \item[\texttt{tuple}] N-uplets non modifiables
-    \item[\texttt{set}] Ensembles (pas de répétition, pas d'ordre)
+    \item[\texttt{list}] Mutable lists, can be heterogeneous
+    \item[\texttt{dict}] Key-value associations
+    \item[\texttt{tuple}] Immutable tuples
+    \item[\texttt{set}] Sets (no repetition, unordered)
   \end{description}
-
-  Chacune a ses caractéristiques propres.
 \end{frame}
