--- a/shared/latex/en/python/basics/dictionaries.tex
+++ b/shared/latex/en/python/basics/dictionaries.tex
@@ -1,12 +1,12 @@
-\begin{frame}{Caractéristiques de \texttt{dict}}
-  \texttt{dict} permet de définir des associations clef-valeur~:
+\begin{frame}{\texttt{dict} characteristics}
+  \texttt{dict} allows to define key-value associations:
   \begin{itemize}
-    \item Correspond aux objets JS, Map Java
-    \item Accès à la valeur associée à une clef en $\mathcal{O}(1)$
-    \item Test de présence d'une clef en $\mathcal{O}(1)$
+    \item Equivalent to JS objets, Java maps
+    \item Access the value associated to a key in $\mathcal{O}(1)$
+    \item Test if a key is in the dict in $\mathcal{O}(1)$
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Utilisation d'un \texttt{dict}}
-  \pycon{python/basics/dictionaries/usage}
+\begin{frame}{\texttt{dict} usage}
+  \pycon{en/python/basics/dictionaries/usage}
 \end{frame}
