--- a/shared/latex/en/python/basics/lists.tex
+++ b/shared/latex/en/python/basics/lists.tex
@@ -1,18 +1,18 @@
-\begin{frame}{Caractéristiques de \texttt{list}}
+\begin{frame}{\texttt{list} characteristics}
   \begin{itemize}
-    \item Collection la plus utilisée en Python
-    \item Peut contenir des éléments de types différents (\emph{très déconseillé})
-    \item A de bonnes performances pour un usage standard
-    \item Plus proche d'un tableau que d'une liste chaînée (accès $\mathcal{O}(1)$ par exemple)
-    \item Pas adaptée au calcul scientifique (pour ça, utiliser \texttt{numpy})
+    \item Probably the most used collection in Python
+    \item Can contain elements of different types (\emph{not recommended at all})
+    \item Good performance
+    \item Despite its name, it's closer to an array than to a linked list (e.g. $\mathcal{O}(1)$ access)
+    \item Not suited for scientific computations (see \texttt{numpy} instead)
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Manipulation basique d'une liste}
-  \pycon{python/basics/lists/usage}
+\begin{frame}{List usage}
+  \pycon{en/python/basics/lists/usage}
 \end{frame}
 
-\begin{frame}{Tranche de liste}
-  Une tranche de liste sélectionne une sous-partie de la liste~:
+\begin{frame}{Slices}
+  A list slice is a subset of a list:
   \pycon{python/basics/lists/slice}
 \end{frame}
