--- a/shared/latex/en/python/basics/tuples.tex
+++ b/shared/latex/en/python/basics/tuples.tex
@@ -1,30 +1,30 @@
-\begin{frame}{Caractéristiques de \texttt{tuple}}
-  Les n-uplets (\emph{tuples} en anglais), sont très similaires aux listes, mais sont~:
+\begin{frame}{\texttt{tuple} characteristics}
+  Very similar to a list, but:
 
   \begin{itemize}
-    \item Immuables
-    \item Adaptés aux éléments hétérogènes
-    \item Hashables si leurs éléments sont immuables
-    \item Très utiles pour retourner plusieurs éléments dans une fonction
+    \item Immutable
+    \item Suited for elements of different types
+    \item Hashable if its elements are hashable
+    \item Standard way to return several values from a function
   \end{itemize}
 \end{frame}
 
-\begin{frame}{Utilisation d'un \texttt{tuple}}
-  \pycon{python/basics/tuples/usage}
+\begin{frame}{\texttt{tuple} usage}
+  \pycon{en/python/basics/tuples/usage}
 \end{frame}
 
-\begin{frame}{Définitions multiples avec un \texttt{tuple}}
+\begin{frame}{Multiple definitions with a \texttt{tuple}}
   \pycon{python/basics/tuples/multiple-definitions}
 \end{frame}
 
-\begin{frame}{Retours multiples avec un \texttt{tuple}}
-  \pycon{python/basics/tuples/multiple-returns}
+\begin{frame}{Multiple values return with a \texttt{tuple}}
+  \pycon{en/python/basics/tuples/multiple-returns}
 \end{frame}
 
-\begin{frame}{Échange de variables avec un \texttt{tuple}}
+\begin{frame}{Variables swap with a \texttt{tuple}}
   \pycon{python/basics/tuples/simple-swap}
 
-  Utilisé pour implémenter le tri à bulles~:
+  e.g. for a bubble sort:
 
   \mintedpycode{python/basics/tuples/bubble-sort}
 \end{frame}
