--- a/shared/latex/en/python/basics/functions.tex
+++ b/shared/latex/en/python/basics/functions.tex
@@ -1,37 +1,29 @@
 \begin{frame}{Introduction}
-  Les fonctions sont un des deux mécanismes (avec les classes) pour regrouper du code.
-
-  Elles sont définies avec \texttt{def} suivi de leur nom, une liste d'arguments entre parenthèses, \texttt{:} puis le corps de la fonction.
-
-  On utilise le mot-clef \texttt{return} pour renvoyer une valeur.
+  Functions are one of the two main ways (with classes) to organize code.
 \end{frame}
 
-\begin{frame}{Exemple}
+\begin{frame}{Example}
   \pycon{python/basics/functions/simple-function}
 \end{frame}
 
-\begin{frame}{Valeurs par défaut}
-  On peut spécifier des valeurs par défaut aux arguments~:
-
+\begin{frame}{Default values}
   \pycon{python/basics/functions/defaults}
 \end{frame}
 
-\begin{frame}{Valeurs par défaut mutables}
-  \begin{alertblock}{Attention}
-    Ne jamais donner de valeur par défaut mutable à une fonction.
+\begin{frame}{Mutable default values}
+  \begin{alertblock}{Warning}
+    Never give a mutable default value to a function.
   \end{alertblock}
 
   \pycon{python/basics/functions/mutable-defaults}
 \end{frame}
 
-\begin{frame}{Appel par mot-clef}
-  On peut spécifier le nom de la variable de l'argument qu'on passe~:
-
+\begin{frame}{Keyword style}
   \pycon{python/basics/functions/keyword}
 \end{frame}
 
-\begin{frame}{Portée des variables}
-  En Python, les variables sont locales aux fonctions.
+\begin{frame}{Variables scope}
+  In Python, the variables scope is the function (not the block).
 
   \pycon{python/basics/functions/scope}
 \end{frame}
