Translate exceptions and native functions in python basics
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/python/basics/native-functions.tex
+++ b/shared/latex/en/python/basics/native-functions.tex
@@ -1,38 +1,29 @@
 \begin{frame}{Introduction}
-  Certaines fonctions ne nécessitent pas d'import. Elles sont toujours disponibles.
+  Some functions do not require an import, they are always available.
 
-  Leur liste complète est disponible dans la \bluelink{https://docs.python.org/fr/3/library/functions.html}{documentation Python}.
+  The complete list is available in the \bluelink{https://docs.python.org/3/library/functions.html}{Python documentation}.
 \end{frame}
 
-\begin{frame}{Création et conversion de types natifs}
+\begin{frame}{Basic types}
   \pycon{python/basics/native-functions/basic-types}
 \end{frame}
 
-\begin{frame}{Mécanismes d'itération}
+\begin{frame}{Iteration}
   \pycon{python/basics/native-functions/iteration}
 \end{frame}
 
-\begin{frame}{Mécanismes d'agrégation}
+\begin{frame}{Aggregation}
   \pycon{python/basics/native-functions/aggregation}
 \end{frame}
 
-\begin{frame}{Manipulation d'objets}
+\begin{frame}{Objects manipulation}
   \pycon{python/basics/native-functions/objects}
 \end{frame}
 
-\begin{frame}{Test d'appartenance à une classe}
+\begin{frame}{Type testing}
   \pycon{python/basics/native-functions/type-checking}
 \end{frame}
 
-\begin{frame}{Opérations de base}
+\begin{frame}{Basic operations}
   \pycon{python/basics/native-functions/basic-operations}
-\end{frame}
-
-\begin{frame}{Méthode d'apprentissage}
-  Les fonctions natives, comme le reste de la bibliothèque standard, s'apprennent au fil des projets~:
-
-  \begin{itemize}[<+(1)->]
-    \item En code review, soyez curieu⋅x⋅se
-    \item Consultez la documentation régulièrement
-  \end{itemize}
 \end{frame}
