--- a/shared/latex/en/python/basics/exceptions.tex
+++ b/shared/latex/en/python/basics/exceptions.tex
@@ -1,36 +1,36 @@
 \begin{frame}{Introduction}
-  Python gère les erreurs avec la structure de contrôle \texttt{try}/\texttt{except} et une hiérarchie de classes d'erreur.
+  Python handles errors with a special construct: \texttt{try}/\texttt{except}, and many different exception classes.
 \end{frame}
 
-\begin{frame}{Hiérarchie d'erreurs natives}
-  La \bluelink{https://docs.python.org/3/library/exceptions.html\#exception-hierarchy}{documentation officielle} contient une liste complète.
+\begin{frame}{Native exception hierarchy}
+  The \bluelink{https://docs.python.org/3/library/exceptions.html\#exception-hierarchy}{Python doc} contains a full list.
 \end{frame}
 
-\begin{frame}{Capturer une erreur}
+\begin{frame}{Intercept an error}
   \pycon{python/basics/exceptions/try-except}
 \end{frame}
 
-\begin{frame}{Définir une erreur personnalisée}
-  Peuvent hériter d'\texttt{Exception} ou d'une erreur plus précise.
+\begin{frame}{Define a custom error}
+  It's possible to inherit from d'\texttt{Exception} or a more specific exception class.
   \mintedpycode{python/basics/exceptions/custom-exception}
 \end{frame}
 
-\begin{frame}{Re-lancer une erreur}
+\begin{frame}{Re-raising errors}
   \pycon{python/basics/exceptions/reraise}
 \end{frame}
 
-\begin{frame}{Envelopper des erreurs}
+\begin{frame}{Wrapping errors}
   \pycon{python/basics/exceptions/chain}
 \end{frame}
 
 \begin{frame}{\texttt{finally}}
-  Le mot-clef \texttt{finally} permet d'exécuter des instructions quoi qu'il arrive.
+  The \texttt{finally} keyword is used to ensure that some code is executed regardless of whether an exception has occured or not.
 
-  La \bluelink{https://docs.python.org/fr/3/reference/compound_stmts.html\#finally}{documentation officielle} contient plus de détails sur cette structure.
+  More details in the \bluelink{https://docs.python.org/3/reference/compound_stmts.html\#finally}{doc}.
 
   \pycon{python/basics/exceptions/finally}
 \end{frame}
 
 \begin{frame}{\texttt{else}}
-  Comme pour les boucles, la clause \texttt{else} est exécutée si on sort normalement du \texttt{try}/\texttt{except} (sans passer par le \texttt{except}).
+  Just like for loops, the \texttt{else} branch is executed if the \texttt{try} branch is completed without an error.
 \end{frame}
