--- a/shared/latex/recommander-system/intro.tex
+++ b/shared/latex/recommander-system/intro.tex
@@ -2,7 +2,7 @@
   \frametitle{Introduction}
   Filtrage de l'information : \\
   \newline
-  Produire une information personnalisé pour un ``client''
+  Produire une information personnalisée pour un \og client\fg
 \end{frame}
 
 \begin{frame}
@@ -20,27 +20,49 @@
 
 \begin{frame}
   \frametitle{Intérêt Mutuel}
-  \begin{itemize}[<+->]
-  \item Facilitation des usages pour le ``client''
-  \item Des bénéfices accrus pour le ``vendeur''
+  \begin{itemize}
+  \item Facilitation des usages pour le \og client\fg
+  \item Des bénéfices accrus pour le \og vendeur\fg
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Types de recommandation}
-  3 types de recommandation :
-  \begin{itemize}[<+->]
-  \item centrée sur l'utilisateur (user-based)
-  \item centrée sur le contenu (item-based)
-  \item colaborative (ou sociale)
+  2 types de recommandation :
+  \begin{itemize}
+  \item Basée sur le contenu (content-based)
+  \item Basée sur l'utilisateur (user-based)
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Collecte des données}
   2 types de collecte des données : 
-  \begin{itemize}[<+->]
+  \begin{itemize}
   \item active
   \item passive
   \end{itemize}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Données}
+  Données explicites et implicites:
+  \begin{itemize}
+    \item Explicite : donnée de qualité mais contraignante pour l'utilisateur (donc potentiellement biaisé)\\
+    \item Implicite : donnée objective mais pauvre du point de vue de la qualité  
+  \end{itemize}
+\end{frame}
+
+% \begin{frame}
+%   \frametitle{Contrainte}
+%   Grosse volumétrie de données $\Rightarrow$ algorithmes simples et rapides 
+% \end{frame}
+
+% \begin{frame}
+%   \frametitle{Évaluation}
+%   On utilise des techniques d'évaluation du machine learning impliquant des bases d'apprentissage et de test.
+%   \begin{center}
+%     $RMSE = \sqrt{\frac{\sum_{u,i}(u(i)_{pred}-u(i))^2}{\#Q}}$
+%   \end{center}
+%   où $\#Q$ est le nombre de prédictions que l'on fait dans la base.
+% \end{frame}
