filtrage collab en cours

--- a/figures/tikz/recommander-system/content-based-filtering.tex
+++ b/figures/tikz/recommander-system/content-based-filtering.tex
@@ -6,7 +6,7 @@
   \begin{tikzpicture}[x=4cm,y=4cm,every node/.style={font={\tiny}}]
     \tikzset{pref-movie/.style={->, very thick, -stealth,black!60!green}}
     \tikzset{rate-movie/.style={->, very thick, -stealth,black!40!blue}}
-    \tikzset{sim-movie/.style={<->, very thick, stealth-stealth,black!40!red}}
+    \tikzset{sim-movie/.style={<->, dashed, very thick, stealth-stealth,black!40!red}}
 
     \node[businessman,minimum size=1cm] at (0,0) (man) {};
     \node at (1,0) (shrek) {\includegraphics[width=2cm]{img/logos/shrek-logo.png}};
