--- a/shared/latex/recommander-system/content-based-filtering.tex
+++ b/shared/latex/recommander-system/content-based-filtering.tex
@@ -3,7 +3,7 @@
     Le \alert{content-based filtering} recommande un contenu en fonction de la proximité aux contenus préférés d'un utilisateur.
   \end{minipage}
   \begin{minipage}{0.49\linewidth}
-    \V{["tikz/recommander-system/content-based-filtering", "th", 1] | image}
+    \V{["tikz/recommander-system/content-based-filtering", "tw", 1] | image}
   \end{minipage}
 \end{frame}
 
@@ -23,7 +23,7 @@
 \end{frame}
 
 \begin{frame}{Métriques de Similarité}
-  Pour deux  vecteurs donnés $q$ et $x$
+  Pour deux  vecteurs $q$ et $x$
   \begin{itemize}
     \item Cosinus : 
      $$sim(q,x) = \cos(q,x)$$
