maj programmation/hardware.tex

--- a/shared/latex/programmation/hardware.tex
+++ b/shared/latex/programmation/hardware.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Mémoire}
-    Composant capable de stocker de l'information.
+    Composant capable de stocker de l'information dans des \textbf{variables}
     \begin{description}
         \item[RAM] Mémoire vive qui sera utilisée par les programmes
         \item[Disque] Mémoire de stockage
@@ -8,12 +8,21 @@
 \end{frame}
 
 \begin{frame}{Processeur}
-    Composant capable d'effectuer des opérations arithmétiques/logiques :
+    Composant capable d'effectuer des opérations arithmétiques et logiques :
     \begin{itemize}
-        \item ET
-        \item OU
-        \item XOR
-        \item ...
+        \item Gestion de \textbf{variables}
+        \begin{itemize}
+            \item déplacer la tête de lecture
+            \item lire/écrire
+            \item ...
+        \end{itemize}
+        \item Opération sur des \textbf{variables}
+        \begin{itemize}
+            \item ET
+            \item OU
+            \item XOR
+            \item ...
+        \end{itemize}
     \end{itemize}
     Ces opérations sont utilisées dans un ordre précis, décrit par un programme.
 \end{frame}
