--- a/shared/latex/programmation/history.tex
+++ b/shared/latex/programmation/history.tex
@@ -1,3 +1,8 @@
+\begin{frame}{IXe siècle}
+    Al-Khwârizmî décrit l'algorithmie.
+    \V{["img/al-khwarizmi-timbre", "th", 0.4] | image}    
+\end{frame}
+
 \begin{frame}{1936}
     Article fondateur des sciences informatiques d'Alan Turing
     \V{["img/alan-turing", "th", 0.7] | image}
