--- a/shared/latex/programmation/theory.tex
+++ b/shared/latex/programmation/theory.tex
@@ -6,3 +6,151 @@
 \begin{frame}{Machine de Turing}
     \V{["img/turing-machine", "th", 0.7] | image}
 \end{frame}
+
+\begin{frame}{Le codage de l'information}
+    On formalise les problèmes à l'aide de variables définies par :
+    \begin{description}[<+->]
+        \item [Le TYPE] nombre entier, nombre réel, caractère, ...
+        \item [La TAILLE] en bits : 8 bits, 32 bits, 64 bits, ...
+        \item [Le CODAGE] 
+        \begin{itemize}
+            \item signé ou non-signé pour les nombres
+            \item ASCII, UTF8 pour les caractères
+            \item ...
+        \end{itemize}
+    \end{description}
+\end{frame}
+
+\begin{frame}{Le codage des entiers}
+    \textbf{Exemple 1 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 0  & 0 & 0 & 0 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{1} \\
+    \end{center}
+    \textbf{Exemple 2 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 0  & 0 & 0 & 0 & 0 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{0} \\
+    \end{center}
+\end{frame}
+
+\begin{frame}{Le codage des entiers}
+    \textbf{Exemple 2 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 0  & 0 & 1 & 0 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{5} \\
+    \end{center}
+    \textbf{Exemple 3 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 1  & 0 & 0 & 1 & 0 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{18} \\
+    \end{center}
+\end{frame}
+
+
+\begin{frame}{Le codage des entiers}
+    \textbf{Exemple 4 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 0  & 1 & 1 & 1 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{?} \\
+    \end{center}
+    \textbf{Exemple 5 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 1   & 1  & 1  & 1  & 1 & 1 & 1 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{?} \\
+    \end{center}
+\end{frame}
+
+\begin{frame}{Le codage des entiers}
+    \textbf{Exemple 4 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 0   & 0  & 0  & 0  & 1 & 1 & 1 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{15} \\
+    \end{center}
+    \textbf{Exemple 5 :}
+    \begin{center}
+        La table de codage : \\
+        $\;$\\
+        \begin{tabular}{|*{2}{l||r|r|r|r|r|r|r|r|}}
+            \hline
+                table de codage & 128 & 64 & 32 & 16 & 8 & 4 & 2 & 1 \\
+            \hline
+                un code         & 1   & 1  & 1  & 1  & 1 & 1 & 1 & 1 \\
+            \hline
+        \end{tabular} \\
+        $\;$\\
+        Le nombre en question : \textbf{255} \\
+    \end{center}
+\end{frame}
+
+\begin{frame}{Le codage d'informations complexes}
+    On organise ces variables en groupes, très souvent hommogènes :
+    \begin{description}[<+->]
+        \item [Les COLLECTIONS] des ensembles d'éléments uniques, sans ordre et très pratiques pour les opération d'union ou intersection.
+        \item [Les LISTES] un vecteur de nombres, une chaine de caractère, une matrice de pixels, ...
+        \item [ETC ...]
+    \end{description}
+\end{frame}
