--- a/shared/latex/programmation/program.tex
+++ b/shared/latex/programmation/program.tex
@@ -14,6 +14,11 @@
     \V{["img/cpu-schema", "th", 0.7] | image}
 \end{frame}
 
+\begin{frame}{Un programme}
+    \textbf{Exemple :}
+    \mintedpycode{python/basics/programmation/program-exemple}
+\end{frame}
+
 
 
 
