--- a/shared/latex/programmation/language.tex
+++ b/shared/latex/programmation/language.tex
@@ -1,4 +1,23 @@
+\begin{frame}{Langages de programmation}
+    \begin{itemize}
+        \item Un alphabet
+        \item Un vocabulaire
+        \item Des règles de grammaire
+        \item environnement de traduction vers le "langage" machine : \textbf{le compilateur}
+    \end{itemize}
+\end{frame}
 
-\begin{frame}{Langage de programmation}
-    Un langage de programmation est un langage informatique destiné à formuler des algorithmes et produire des programmes informatiques qui les appliquent. D'une manière similaire à une langue naturelle, un langage de programmation est composé d'un alphabet, d'un vocabulaire, de règles de grammaire, de significations, mais aussi d'un environnement de traduction censé rendre sa syntaxe compréhensible par la machine.
+\begin{frame}{Les paradigmes de programmation}
+    \begin{description}
+        \item [Procédural] Au plus proche des instructions du processeur \\(C, Fortran, Cobol, ...)
+        \item [Déclaratif]
+        \begin{itemize}
+            \item Fonctionnel : résolution de lambda-calcul par la récursivité (Haskell, Ocaml, ...)
+            \item Logique : résolution de prédicats par des règles déductives (Prolog, ...)
+        \end{itemize}
+        \item [Orienté Objet] Introduction de la notion d'Objet et d'héritage \\(Java, Swift, ...)
+        \item [Visuel] Le program est défini par un schéma \\(Delphi, Smalltalk, ...)
+        \item [Basé web] Le programme est envoyé à travers le web pour être exécuté chez le client (PHP, Javascript, ...)
+        \item [ETC ...]
+    \end{description}
 \end{frame}
