--- a/shared/latex/programmation/algorithm.tex
+++ b/shared/latex/programmation/algorithm.tex
@@ -1,9 +1,9 @@
-\begin{frame}{Algorithme}
+\begin{frame}{Définition}
     Un algorithme est une suite finie et non ambiguë d'instructions et d’opérations permettant de résoudre une classe de problèmes.
     \V{["img/al-khwarizmi-timbre", "th", 0.4] | image}    
 \end{frame}
 
-\begin{frame}{Algorithme}
+\begin{frame}{Caractéristiques}
     Un algorithme est défini par :
     \begin{itemize}
         \item Ses \textbf{entrées} (sous formes de \textbf{variables})
