--- a/shared/latex/programmation/language.tex
+++ b/shared/latex/programmation/language.tex
@@ -1,23 +1,36 @@
-\begin{frame}{Langages de programmation}
+\begin{frame}{Définition}
     \begin{itemize}
         \item Un alphabet
         \item Un vocabulaire
         \item Des règles de grammaire
-        \item environnement de traduction vers le "langage" machine : \textbf{le compilateur}
+        \item environnement de traduction vers le "langage" machine : 
     \end{itemize}
+    \begin{center}
+        \textbf{le compilateur}
+    \end{center}
 \end{frame}
 
 \begin{frame}{Les paradigmes de programmation}
     \begin{description}
-        \item [Procédural] Au plus proche des instructions du processeur \\(C, Fortran, Cobol, ...)
+        \item [Procédural] Au plus proche des instructions du processeur 
+                        \\(C, Fortran, Cobol, ...)
         \item [Déclaratif]
         \begin{itemize}
             \item Fonctionnel : résolution de lambda-calcul par la récursivité (Haskell, Ocaml, ...)
             \item Logique : résolution de prédicats par des règles déductives (Prolog, ...)
         \end{itemize}
-        \item [Orienté Objet] Introduction de la notion d'Objet et d'héritage \\(Java, Swift, ...)
-        \item [Visuel] Le program est défini par un schéma \\(Delphi, Smalltalk, ...)
+        \item [Orienté Objet] Introduction de la notion d'Objet et d'héritage 
+                            \\(Java, Swift, ...)
+        \item [Visuel] Le program est défini par un schéma 
+                    \\(Delphi, Smalltalk, ...)
         \item [Basé web] Le programme est envoyé à travers le web pour être exécuté chez le client (PHP, Javascript, ...)
         \item [ETC ...]
     \end{description}
 \end{frame}
+
+\begin{frame}{Un code source}
+    \textbf{Exemple :}
+    \mintedpycode{python/basics/programmation/program-exemple}
+\end{frame}
+
+
