--- a/shared/latex/programmation/program.tex
+++ b/shared/latex/programmation/program.tex
@@ -1,5 +1,5 @@
-\begin{frame}{Le Programme}
-    Ensemble d'instructions qui doivent être executées sur la mémoire. \\
+\begin{frame}{Définition}
+    Ensemble d'instructions qui doivent être executées sur la mémoire en suivant un algorithme. \\
     \newline
     Les premiers programmes étaient constitués de composants soudés pour executer les instructions de déplacement de \textbf{la tete de lecture} sur \textbf{la bande de mémoire}
 \end{frame}
@@ -14,7 +14,7 @@
     \V{["img/cpu-schema", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Un programme}
+\begin{frame}{Un code source}
     \textbf{Exemple :}
     \mintedpycode{python/basics/programmation/program-exemple}
 \end{frame}
