--- a/shared/latex/programmation/theory.tex
+++ b/shared/latex/programmation/theory.tex
@@ -1,4 +1,4 @@
-\begin{frame}{IXe siècle}
+\begin{frame}{Définition}
     On résoud des \textbf{problèmes} avec des algorithmes
     \V{["img/al-khwarizmi-timbre", "th", 0.4] | image}    
 \end{frame}
